# svd-vector-gen

./: Cargo.toml  README.md  device_STM32C011.x  device_STM32F303.x  vector_STM32C011.txt  vector_STM32F303.txt
src/: main.rs
