[package]
name = "svd-vector-gen"
version = "0.1.0"
edition = "2021"
authors = ["Kiran Nayak <niekiran@gmail.com>"]
description = "A tool to process Microcontroller SVD files(e.g. STM32) and generate vector tables and linker scripts."
license = "MIT"
repository = "https://github.com/niekiran/svd-vector-gen.git"
keywords = ["stm32", "svd", "vector-table", "linker-script"]
categories = ["embedded", "hardware-support", "development-tools"]

[dependencies]
svd-parser = "0.14.7"

[[bin]]
name = "svd-vector-gen"
path = "src/main.rs"